--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Yuziarc/grp5project/issues"
   },
-  "homepage": "https://github.com/Yuziarc/grp5project#readme"
+  "homepage": "https://github.com/Yuziarc/grp5project#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  }
 }
