--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -9,7 +9,7 @@ jobs:
         id: hello
         uses: Yuziarc/grp5project
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'Dylan'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
