--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: Yuziarc/grp5project
+        uses: yuziarc/grp5project@v1
         with:
           who-to-greet: 'Dylan'
       # Use the output from the `hello` step
