--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -9,7 +9,7 @@ jobs:
         id: hello
         uses: yuziarc/grp5project@v1
         with:
-          who-to-greet: 'Dylan'
+          who-to-greet: 'dylan'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
